# Roulette-Multiplayer

./: CMakeLists.txt  Readme.md  gitignore  requirements.txt
examples/: aaa  demo_pybind.cpp  main.cpp  roulette_pybind.cpp  spiel_pybind.cpp  spiel_test.cpp  spieler_pybind.cpp  spiellogik_pybind.cpp  spiellogik_test.cpp  wette_pybind.cpp
extra/: auth.py  demo_fastapi_2.py  demo_requests.py  roulette_pybind.cpp  roulette_pybind.py  roulette_requests.py  roulette_server_fastapi.py  schemas.py  unit_test_tobi.py
include/: Doxyfile
include/hangman/: hangman_board.hpp
include/html/: annotated.html  classRoulette_1_1Spiel-members.html  classRoulette_1_1Spiel.html  classes.html  dir_044f09e057ca1f2d6842cb44df99677a.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  namespaceRoulette.html  namespaces.html  spiel_8hpp.html  spiel_8hpp__incl.map  spiel_8hpp__incl.md5  spiel_8hpp_source.html
include/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  (+12 more)
include/latex/: annotated.tex  classRoulette_1_1Spiel.tex  dir_044f09e057ca1f2d6842cb44df99677a.tex  files.tex  namespaceRoulette.tex  namespaces.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  spiel_8hpp.tex  spiel_8hpp__incl.md5
include/roulette/: spiel.hpp  spieler.hpp  spiellogik.hpp  wette.hpp
src/: Doxyfile  hangman_board.cpp  spiel.cpp  spieler.cpp  spiellogik.cpp  wette.cpp
